--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wplay",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Launcher de jogos em Electron com download, instalacao e execucao.",
   "author": "WPlay",
   "main": "main.js",
@@ -11,9 +11,10 @@
     "next:build": "next build",
     "dev": "npm run tw:build && npm run next:build && electron .",
     "gh:publish-game": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/publish-game-to-github.ps1",
+    "update-now": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/update-now.ps1",
     "build": "npm run tw:build && npm run next:build && electron-builder --win --x64",
     "build:portable": "npm run tw:build && npm run next:build && electron-builder --win portable --x64 -c.win.artifactName=WPlay-Portable-${version}-${arch}.${ext}",
-    "release:github": "npm run tw:build && npm run next:build && electron-builder --win --x64 --publish always -c.publish.provider=github"
+    "release:github": "npm run tw:build && npm run next:build && electron-builder --win --x64 --publish always -c.publish.provider=github -c.publish.owner=yk045t0854t0845ht8045 -c.publish.repo=wplay-update -c.publish.releaseType=release"
   },
   "dependencies": {
     "7zip-bin": "^5.2.0",
