--- a/package.json
+++ b/package.json
@@ -98,15 +98,19 @@
           ]
         }
       ],
-      "artifactName": "WPlaySetup-${version}.${ext}"
+      "artifactName": "WPlaySetup.${ext}"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
+      "include": "build/installer.nsh",
       "installerIcon": "build/icon.ico",
       "uninstallerIcon": "build/icon.ico",
+      "installerHeader": "build/installerHeader.bmp",
+      "installerSidebar": "build/installerSidebar.bmp",
+      "uninstallerSidebar": "build/installerSidebar.bmp",
       "installerHeaderIcon": "build/icon.ico",
       "shortcutName": "WPlay"
     },
