--- a/.github/workflows/release-launcher.yml
+++ b/.github/workflows/release-launcher.yml
@@ -77,7 +77,7 @@ jobs:
           $apiUrl = "https://api.github.com/repos/$owner/$repo/releases/tags/$tag"
           $headers = @{
             "Authorization" = "Bearer $env:GH_TOKEN"
-            "User-Agent"    = "WPlay-ReleaseWorkflow"
+            "User-Agent"    = "Origin-ReleaseWorkflow"
             "Accept"        = "application/vnd.github+json"
           }
 
